site logo and meta tags added

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <link rel="shortcut icon" href="/src/assets/images/logo for link in site.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kwood - экоукрашения</title>
+    <title>Kwood - экоукрашения ручной работы</title>
+    <meta name="description" content="Kwood - это стильные украшения ручной работы. Всегда приятные цены и сервис. Собирайте модный образ вместе с украшениями Kwood." />
   </head>
   <body>
     <div id="app"></div>
